--- a/game.html
+++ b/game.html
@@ -9,6 +9,6 @@
         </div>
     </body>
     <footer>
-        <script src="game.js"></script> 
+        <script src="game2.js"></script> 
     </footer>
 </html>
